--- a/Stellabot_Backend/package.json
+++ b/Stellabot_Backend/package.json
@@ -21,6 +21,7 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
-    "typescript": "^5.4.5"
+    "@types/node": "^24.8.1",
+    "typescript": "^5.9.3"
   }
 }
