--- a/Stellabot_Backend/package.json
+++ b/Stellabot_Backend/package.json
@@ -17,8 +17,12 @@
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.12.1",
     "cors": "^2.8.5",
+    "dompurify": "^3.3.0",
     "dotenv": "^17.2.2",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.0",
+    "jsdom": "^24.0.0"
   },
   "devDependencies": {
     "@types/node": "^24.8.1",
